NEW 262968
Styles on elements of parents with :last-child pseudo-classes not being udpated
https://bugs.webkit.org/show_bug.cgi?id=262968
Summary Styles on elements of parents with :last-child pseudo-classes not being udpated
Ethan Wong
Reported 2023-10-10 11:13:51 PDT
Created attachment 468154 [details] A page that reproduces this issue Styles on elements of parents with :last-child pseudo-classes may not update correctly when new elements being added. The attached html file reproduces this issue.
Attachments
A page that reproduces this issue (859 bytes, text/html)
2023-10-10 11:13 PDT, Ethan Wong
no flags
Screen recording of this issue (2.55 MB, video/quicktime)
2023-10-10 11:14 PDT, Ethan Wong
no flags
Ethan Wong
Comment 1 2023-10-10 11:14:35 PDT
Created attachment 468155 [details] Screen recording of this issue
Radar WebKit Bug Importer
Comment 2 2023-10-10 13:52:37 PDT
Ethan Wong
Comment 3 2023-10-14 04:17:31 PDT
Ahmad Saleem
Comment 4 2023-12-17 10:13:12 PST
@Ethan - I noticed you have closed your PR but while testing the reduction / test case on WebKit ToT (272190@main), it is still reproducible.
Note You need to log in before you can comment on or make changes to this bug.