Style::commitRelations should update elementUpdate.chage accordingly. https://bugs.webkit.org/show_bug.cgi?id=262968

Reviewed by NOBODY (OOPS!).

Style::commitRelations should update elementUpdate.chage for the Style::Update object.
Otherwise, elements with selectors such as ":first-child" and ":last-child" may not
invalidate their styles properly.

* LayoutTests/fast/selectors/first-and-last-child-style-invalidation-expected.html: Added.
* LayoutTests/fast/selectors/first-and-last-child-style-invalidation.html: Added.
* Source/WebCore/style/StyleRelations.cpp:
(WebCore::Style::commitRelations):